Revision history for Perl extension Wx.

0.9911 TBR
    - wxDataView - updated for 2.9.4
    - wxTreeEvent::GetKeyEvent() added

0.9910 no release

0.9909 Thu May 31 2012
    - corrected wxThePrintPaperDatabase

0.9908 Tue May 22 2012
    - wxHtmlPrintout & wxRichTextPrintout correct typemap and destruction
    - wxRichTextBuffer - added copy constructor
    - wxPrintPaperDatabase & wxPrintPaperType added

0.9907 Thur May 10 2012
    - wrapped wxHtmlPrintout
    - added missing wxPrintout methods
    - fixed GetPageInfo for wxRichTextPrintout
    - fixed broken Makefile.PL with recent EUMM on Mac
    - some minor additions to RichTextCtrl/RichTextBuffer

0.9906 Tue Mar 27 2012
    - wrapped wxWebView ( wxWidgets ge 2.9.3 )
    - wrapped wxTimePickerCtrl ( wxWidgets ge 2.9.3 ) 
    - wrapped wxRichToolTip ( wxWidgets ge 2.9.3 )
    - wrapped wxBannerWindow ( wxWidgets ge 2.9.3 )
    - Allow RichTextPrinting without dialog ( wxWidgets ge 2.9.4 )
      (thanks to Steve Cookson )
    - wrapped some missing wxPrintData methods

0.9905 Fri Mar 16 2012
    - wrapped wxPropertyGrid ( wxWidgets ge 2.9.3 )
    - wrapped native wxTreeListCtrl ( wxWidgets ge 2.9.3 )
    - wrapped wxRibbonControl ( wxWidgets ge 2.9.3 )
    - ShowModal implementation for wxPrintDialog and wxPageSetupDialog
      ( thanks to Tomohiro Hosaka )
    - recent EUMM breaks EU_MY_Metafile

0.9904 Tue Feb 28 2012
    - Implemented TextCtrlIface for RichTextCtrl in >= 2.9.2
    - Implemented TextCtrlIface for SearchCtrl in >= 2.9.2
    - several 2.9.2 / 2.9.3 compatibility changes
    - Some additional RichText events wrapped - ( thanks to Steve Cookson )
    - wrapped STC specific LineUp and LineDown
    - wrapped some specific Set/GetLayoutDirection
    - Fixes for OSX Xcode 4.3 builds

0.9903 Wed Nov 09 08:00:00 BST 2011
    - Remove force of static binding for mingw libgcc & libstdc++
0.9902 Thu Oct 13 08:00:00 BST 2011
    - 2.9.2 will now build with recent mingw compilers (>= gcc 4.5.2)